example2/calmwu-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: calmwupod
  annotations:
    io.kubernetes.cri.untrusted-workload: "true"
  labels:
    app: calmwupod #service通过该标签与其对应
spec:
  containers:
  - name: calmwupod
    image: kubeguide/tomcat-app:v1
    ports:
    - containerPort: 9090
